# acclima

./: api.py
backend/: Dockerfile  air.py  api.py  cache.py  compose.yaml  config.py  db.py  geo.py  groovy.py  light.py  main.py  noise.py  orm.py  pyproject.toml  secret.py  task.py  test.ipynb  util.py
backend/noise/: cache.py  comp.py  const.py  geo.py  groovy.py  h2db.py  overpass.py
backend/noisemodelling_dist/noisemodelling/wps/Import_and_Export/: Import_OSM.groovy  Import_OSM_par.groovy
backend/noisemodelling_dist/noisemodelling/wps/NoiseModelling/: Noise_level_from_source.groovy
backend/noisemodelling_dist/noisemodelling/wps/Receivers/: Building_Grid.groovy
backend/typings/java/: __init__.pyi
backend/typings/java/applet/: __init__.pyi
backend/typings/java/awt/: __init__.pyi
backend/typings/java/awt/color/: __init__.pyi
backend/typings/java/beans/: __init__.pyi
backend/typings/java/io/: __init__.pyi
backend/typings/java/lang/: __init__.pyi
backend/typings/java/math/: __init__.pyi
backend/typings/java/net/: __init__.pyi
backend/typings/java/nio/: __init__.pyi
backend/typings/java/rmi/: __init__.pyi
backend/typings/java/security/: __init__.pyi
backend/typings/java/sql/: __init__.pyi
backend/typings/java/text/: __init__.pyi
backend/typings/java/time/: __init__.pyi
backend/typings/java/util/: __init__.pyi
backend/typings/jpype/: __init__.pyi
backend/typings/org/: __init__.pyi
backend/typings/org/codehaus/: __init__.pyi
backend/typings/org/h2gis/: __init__.pyi
backend/typings/org/locationtech/: __init__.pyi
(+300 files in other folders)
