[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nikita <yakuri2006@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
requests = "^2.31.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
